Improve backwards compatibility

--- a/packages/grafana-ui/src/components/Card/Card.mdx
+++ b/packages/grafana-ui/src/components/Card/Card.mdx
@@ -176,7 +176,7 @@ To render cards in a list, it is possible to nest them inside `li` items.
 ```
 
 <Preview>
-  <ul style={{ padding: '20px', maxWidth: '800px', listStyle: 'none', display: 'grid', gap: '8px' }}>
+  <ul style={{ padding: '20px', maxWidth: '800px', listStyle: 'none', display: 'grid' }}>
     <li>
       <Card>
         <Card.Heading>List card item</Card.Heading>
