Trigger extra events

--- a/packages/grafana-ui/src/components/Badge/Badge.mdx
+++ b/packages/grafana-ui/src/components/Badge/Badge.mdx
@@ -1,5 +1,17 @@
+import { Meta, Props } from '@storybook/addon-docs/blocks';
+import { Badge } from './Badge';
+import { ProBadge } from './ProBadge';
+
 <Meta title="MDX|Badge" component={Badge} />
 
-# Badge
+## Badge
 
 The badge component adds meta information to other content, for example about release status or new elements. You can add any `Icon` component or use the badge without an icon.
+
+<Props of={Badge} />
+
+## ProBadge
+
+A component used to highlight premium features.
+
+<Props of={ProBadge} />
