Fix tooltip wording

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -211,7 +211,7 @@
       "refresh": "Refresh dashboard",
       "save": "Save dashboard",
       "settings": "Dashboard settings",
-      "share": "Share dashboard or panel",
+      "share": "Share dashboard",
       "unmark-favorite": "Unmark as favorite"
     }
   },
