--- a/public/locales/es-ES/grafana.json
+++ b/public/locales/es-ES/grafana.json
@@ -626,6 +626,10 @@
     "off-option": {
       "aria-label": "Desactivar actualización automática",
       "label": "Apagado"
+    },
+    "tooltip": {
+      "interval-selected": "",
+      "turned-off": ""
     }
   },
   "search": {
