--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -132,10 +132,15 @@
       "error-message": "",
       "title": ""
     },
-    "badge": {
-      "text": ""
+    "link": "",
+    "list": {
+      "delete": "",
+      "label": "",
+      "loading": "",
+      "read-only": "",
+      "source": "",
+      "target": ""
     },
-    "loading": "",
     "page-content": "",
     "page-heading": "",
     "sub-title": ""
