--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -132,10 +132,15 @@
       "error-message": "An unknown error occurred while fetching correlation data. Please try again.",
       "title": "Error fetching correlation data"
     },
-    "badge": {
-      "text": "Read only"
+    "link": "documentation ",
+    "list": {
+      "delete": "delete correlation",
+      "label": "Label",
+      "loading": "loading...",
+      "read-only": "Read only",
+      "source": "Source",
+      "target": "Target"
     },
-    "loading": "loading...",
     "page-content": "To enable Correlations, add it in the Grafana config:",
     "page-heading": "Correlations are disabled",
     "sub-title": "Define how data living in different data sources relates to each other. Read more in the"
