--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -132,10 +132,15 @@
       "error-message": "Åŉ ūŉĸŉőŵŉ ęřřőř őččūřřęđ ŵĥįľę ƒęŧčĥįŉģ čőřřęľäŧįőŉ đäŧä. Pľęäşę ŧřy äģäįŉ.",
       "title": "Ēřřőř ƒęŧčĥįŉģ čőřřęľäŧįőŉ đäŧä"
     },
-    "badge": {
-      "text": "Ŗęäđ őŉľy"
+    "link": "đőčūmęŉŧäŧįőŉ ",
+    "list": {
+      "delete": "đęľęŧę čőřřęľäŧįőŉ",
+      "label": "Ŀäþęľ",
+      "loading": "ľőäđįŉģ...",
+      "read-only": "Ŗęäđ őŉľy",
+      "source": "Ŝőūřčę",
+      "target": "Ŧäřģęŧ"
     },
-    "loading": "ľőäđįŉģ...",
     "page-content": "Ŧő ęŉäþľę Cőřřęľäŧįőŉş, äđđ įŧ įŉ ŧĥę Ğřäƒäŉä čőŉƒįģ:",
     "page-heading": "Cőřřęľäŧįőŉş äřę đįşäþľęđ",
     "sub-title": "Đęƒįŉę ĥőŵ đäŧä ľįvįŉģ įŉ đįƒƒęřęŉŧ đäŧä şőūřčęş řęľäŧęş ŧő ęäčĥ őŧĥęř. Ŗęäđ mőřę įŉ ŧĥę"
