--- a/packages/grafana-ui/src/components/Layout/Grid/Grid.mdx
+++ b/packages/grafana-ui/src/components/Layout/Grid/Grid.mdx
@@ -1,4 +1,4 @@
-import { Meta, ArgTypes, Props } from '@storybook/blocks';
+import { Meta, ArgTypes } from '@storybook/blocks';
 import { Grid } from './Grid';
 import { GridItem } from './GridItem';
 
