Grafana-UI: Add tooltip for interval picker in RefreshPicker (#74534)
* feat: add tooltip for interval picker

* refactor: remove ts error

* feat: extract new translations

* refactor: deprecate unused tooltip property

* refactor: correct syntax of dynamic string

* refactor: remove interval and autogenerated strings

* refactor: localisation

* refactor

--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -669,8 +669,9 @@
       "aria-label": "Turn off auto refresh",
       "label": "Off"
     },
-    "select-button": {
-      "auto-refresh": "Set auto refresh interval"
+    "tooltip": {
+      "interval-selected": "Set auto refresh interval",
+      "turned-off": "Auto refresh off"
     }
   },
   "search": {
