--- a/public/locales/fr-FR/grafana.json
+++ b/public/locales/fr-FR/grafana.json
@@ -674,8 +674,9 @@
       "aria-label": "Désactiver l'actualisation automatique",
       "label": "Désactivé"
     },
-    "select-button": {
-      "auto-refresh": "Définir l'intervalle d'actualisation automatique"
+    "tooltip": {
+      "interval-selected": "",
+      "turned-off": ""
     }
   },
   "search": {
