--- a/public/locales/fr-FR/grafana.json
+++ b/public/locales/fr-FR/grafana.json
@@ -229,6 +229,11 @@
     "callees": "",
     "callers": ""
   },
+  "flame-graph-context-menu": {
+    "copy-label": "",
+    "focus-label": "",
+    "sandwich-label": ""
+  },
   "flame-graph-header": {
     "align-left-description": "",
     "align-right-description": "",
