--- a/packages/grafana-ui/src/components/Layout/Box/Box.mdx
+++ b/packages/grafana-ui/src/components/Layout/Box/Box.mdx
@@ -6,7 +6,7 @@ import { Box } from './Box';
 # Box
 
 The Box Component is the most basic layout component. It can be used to build more complex components and layouts with properties
-that use our design tokens instead of with css.
+that use our design tokens instead of using CSS.
 
 ### Usage
 
