--- a/packages/grafana-ui/src/components/Layout/Box/Box.mdx
+++ b/packages/grafana-ui/src/components/Layout/Box/Box.mdx
@@ -25,7 +25,7 @@ If you need more specific layouts like Flex or Grid, use those specific componen
    - Make sure it is strictly typed, making use of design tokens if needed. Instead of `[propName]: number`, use `[propName]: ThemeSpacingTokens`;
    - If it is a css prop, you should make it responsive. To do so, instead of definiting it as `[propName]: ThemeSpacingTokens`,
      define it as `[propName]: ResponsiveProp<ThemeSpacingTokens>`.
-3. Add it to the css array in `getStyles` in `Box.tsx`.
+3. Add it to the CSS array in `getStyles` in `Box.tsx`.
    - If it is a `ResponsiveProp`, you should use the `getResponsiveStyle` helper function
    ```
     getResponsiveStyle<ThemeSpacingTokens>(theme, [propName], (val) => ({
