--- a/packages/grafana-ui/src/components/Layout/Box/Box.mdx
+++ b/packages/grafana-ui/src/components/Layout/Box/Box.mdx
@@ -12,7 +12,7 @@ that use our design tokens instead of using CSS.
 
 #### When to use
 
-Use it whenever you would use custom css
+Use it whenever you would use custom CSS.
 
 #### When not to use
 
