--- a/packages/grafana-ui/src/components/Layout/Box/Box.mdx
+++ b/packages/grafana-ui/src/components/Layout/Box/Box.mdx
@@ -23,7 +23,7 @@ If you need more specific layouts like Flex or Grid, use those specific componen
 1. Make sure you absolutely need this prop. If in doubt, ask someone from the design system team.
 2. Add the prop to the `BoxProps` interface in `Box.tsx`.
    - Make sure it is strictly typed, making use of design tokens if needed. Instead of `[propName]: number`, use `[propName]: ThemeSpacingTokens`;
-   - If it is a css prop, you should make it responsive. To do so, instead of definiting it as `[propName]: ThemeSpacingTokens`,
+   - If it is a CSS prop, you should make it responsive. To do so, instead of defining it as `[propName]: ThemeSpacingTokens`,
      define it as `[propName]: ResponsiveProp<ThemeSpacingTokens>`.
 3. Add it to the CSS array in `getStyles` in `Box.tsx`.
    - If it is a `ResponsiveProp`, you should use the `getResponsiveStyle` helper function
