--- a/public/locales/en-US/grafana.json
+++ b/public/locales/en-US/grafana.json
@@ -818,8 +818,8 @@
       "select-time": "Select a time range"
     },
     "content": {
-      "empty-recent-list-text1": "It looks like you haven't used this time picker before. As soon as you enter some time intervals, recently used intervals will appear here.",
-      "empty-recent-list-text2": "<0><0>Read the documentation</0><1> to find out more about how to enter custom time ranges.</1></0>",
+      "empty-recent-list-info": "It looks like you haven't used this time picker before. As soon as you enter some time intervals, recently used intervals will appear here.",
+      "empty-recent-list-docs": "<0><0>Read the documentation</0><1> to find out more about how to enter custom time ranges.</1></0>",
       "filter-placeholder": "Search quick ranges"
     },
     "footer": {
