--- a/public/locales/es-ES/grafana.json
+++ b/public/locales/es-ES/grafana.json
@@ -823,8 +823,8 @@
       "select-time": "Seleccionar un intervalo de tiempo"
     },
     "content": {
-      "empty-recent-list-text1": "",
-      "empty-recent-list-text2": "",
+      "empty-recent-list-docs": "",
+      "empty-recent-list-info": "",
       "filter-placeholder": "Buscar intervalos rápidos"
     },
     "footer": {
