--- a/public/locales/zh-Hans/grafana.json
+++ b/public/locales/zh-Hans/grafana.json
@@ -207,12 +207,12 @@
       "unmark-favorite": "取消标记为收藏"
     }
   },
+  "data-source-picker": {
+    "open-advanced-button": ""
+  },
   "data-sources": {
     "datasource-add-button": {
       "label": ""
-    },
-    "picker": {
-      "open-advanced-button": ""
     }
   },
   "explore": {
