Fix spelling mistake

--- a/packages/grafana-ui/src/components/Stack/Stack.mdx
+++ b/packages/grafana-ui/src/components/Stack/Stack.mdx
@@ -28,7 +28,7 @@ Use the `Grid` component instead for these use cases:
 
 Use the `Flex` component instead for these use cases:
 
-- **Alignmnet:** More options for item alignment.
+- **Alignment:** More options for item alignment.
 - **Flex items:** Custom flex basis or configure how items stretch and wrap.
 
 <ArgTypes of={Stack} />
