--- a/packages/grafana-ui/src/components/Layout/Grid/Grid.mdx
+++ b/packages/grafana-ui/src/components/Layout/Grid/Grid.mdx
@@ -8,7 +8,7 @@ import { GridItem } from './GridItem';
 
 The `Grid` component allows for the organized layout and alignment of content into a grid-based structure.
 
-When a grid child needs to set a value to either `grid-column-start`, `grid-column-end`, `grid-row-start` or `grid-column-end` you should use the `GridItem`. The `GridItem` also has the `displayContents` prop that makes the item not occupy any space but passing the positioning props and keeps their children as elements of the grid. You can an example on the [GridItemPosition story](/story/general-layout-grid--grid-items-position).
+When a grid child needs to set a value to either `grid-column-start`, `grid-column-end`, `grid-row-start` or `grid-column-end` you should use the `GridItem`. The `GridItem` also has the `displayContents` prop that makes the item not occupy any space but passing the positioning props and keeps their children as elements of the grid. You can find an example on the [GridItemPosition story](/story/general-layout-grid--grid-items-position).
 
 When there is no need to pass any prop to the children of the grid, you can just pass an array of elements to the Grid component as you can see in the rest of the story examples.
 
