Explorer: i18n in NodeGraph component

--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -220,6 +220,15 @@
       "label": ""
     }
   },
+  "explorer": {
+    "node-graph": {
+      "count-warning__one": "",
+      "count-warning__other": "",
+      "planel-chrome": {
+        "title": ""
+      }
+    }
+  },
   "folder-picker": {
     "loading": "Ordner werden geladen …"
   },
