--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -220,6 +220,15 @@
       "label": "Åđđ ŉęŵ đäŧä şőūřčę"
     }
   },
+  "explorer": {
+    "node-graph": {
+      "count-warning__one": "",
+      "count-warning__other": "",
+      "planel-chrome": {
+        "title": ""
+      }
+    }
+  },
   "folder-picker": {
     "loading": "Ŀőäđįŉģ ƒőľđęřş..."
   },
