--- a/public/locales/zh-Hans/grafana.json
+++ b/public/locales/zh-Hans/grafana.json
@@ -215,6 +215,14 @@
       "label": ""
     }
   },
+  "explorer": {
+    "node-graph": {
+      "count-warning__other": "",
+      "planel-chrome": {
+        "title": ""
+      }
+    }
+  },
   "folder-picker": {
     "loading": "正在加载文件夹..."
   },
