i18n in TraceViewContainer component

--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -220,6 +220,13 @@
       "label": ""
     }
   },
+  "explorer": {
+    "trace-view": {
+      "panel-chrome": {
+        "title": ""
+      }
+    }
+  },
   "folder-picker": {
     "loading": "Ordner werden geladen …"
   },
