--- a/public/locales/zh-Hans/grafana.json
+++ b/public/locales/zh-Hans/grafana.json
@@ -215,6 +215,13 @@
       "label": ""
     }
   },
+  "explorer": {
+    "trace-view": {
+      "panel-chrome": {
+        "title": ""
+      }
+    }
+  },
   "folder-picker": {
     "loading": "正在加载文件夹..."
   },
