i18n in RawPrometheusContainer component

--- a/public/locales/de-DE/grafana.json
+++ b/public/locales/de-DE/grafana.json
@@ -220,6 +220,16 @@
       "label": ""
     }
   },
+  "explore": {
+    "raw-prometheus-container": {
+      "label": {
+        "table": ""
+      },
+      "meta-item-value": "",
+      "raw-result-style": "",
+      "table-result-style": ""
+    }
+  },
   "folder-picker": {
     "loading": "Ordner werden geladen …"
   },
