--- a/public/locales/zh-Hans/grafana.json
+++ b/public/locales/zh-Hans/grafana.json
@@ -215,6 +215,16 @@
       "label": ""
     }
   },
+  "explore": {
+    "raw-prometheus-container": {
+      "label": {
+        "table": ""
+      },
+      "meta-item-value": "",
+      "raw-result-style": "",
+      "table-result-style": ""
+    }
+  },
   "folder-picker": {
     "loading": "正在加载文件夹..."
   },
