--- a/public/locales/fr-FR/grafana.json
+++ b/public/locales/fr-FR/grafana.json
@@ -225,6 +225,16 @@
       "label": ""
     }
   },
+  "explore": {
+    "raw-prometheus-container": {
+      "label": {
+        "table": ""
+      },
+      "meta-item-value": "",
+      "raw-result-style": "",
+      "table-result-style": ""
+    }
+  },
   "folder-picker": {
     "loading": "Chargement des dossiers..."
   },
