--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -220,6 +220,16 @@
       "label": "Åđđ ŉęŵ đäŧä şőūřčę"
     }
   },
+  "explore": {
+    "raw-prometheus-container": {
+      "label": {
+        "table": ""
+      },
+      "meta-item-value": "",
+      "raw-result-style": "",
+      "table-result-style": ""
+    }
+  },
   "folder-picker": {
     "loading": "Ŀőäđįŉģ ƒőľđęřş..."
   },
