--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -221,6 +221,15 @@
     }
   },
   "explore": {
+    "prometheus-list-view": {
+      "raw-list-container": {
+        "result-count": "",
+        "switch-label": ""
+      },
+      "raw-list-item": {
+        "icon-tooltip-copy": ""
+      }
+    },
     "raw-prometheus-container": {
       "label": {
         "table": ""
