--- a/public/locales/pseudo-LOCALE/grafana.json
+++ b/public/locales/pseudo-LOCALE/grafana.json
@@ -126,6 +126,30 @@
       "placeholder": "Ŝęäřčĥ äľľ"
     }
   },
+  "correlations": {
+    "basic-info": {
+      "Description-description": "Øpŧįőŉäľ đęşčřįpŧįőŉ ŵįŧĥ mőřę įŉƒőřmäŧįőŉ äþőūŧ ŧĥę ľįŉĸ",
+      "Description-label": "Đęşčřįpŧįőŉ",
+      "Label-description": "Ŧĥįş ŉämę ŵįľľ þę ūşęđ äş ŧĥę ľäþęľ ƒőř ŧĥę čőřřęľäŧįőŉ. Ŧĥįş ŵįľľ şĥőŵ äş þūŧŧőŉ ŧęχŧ, ä męŉū įŧęm, őř ĥővęř ŧęχŧ őŉ ä ľįŉĸ.",
+      "Label-label": "Ŀäþęľ",
+      "Label-placeholder": "ę.ģ. Ŧęmpő ŧřäčęş",
+      "Label-required": "Ŧĥįş ƒįęľđ įş řęqūįřęđ.",
+      "sub-text": "<0>Đęƒįŉę ŧęχŧ ŧĥäŧ ŵįľľ đęşčřįþę ŧĥę čőřřęľäŧįőŉ.</0>",
+      "title": "Đęƒįŉę čőřřęľäŧįőŉ ľäþęľ (Ŝŧęp 1 őƒ 3)"
+    },
+    "source-form": {
+      "control-required": "Ŧĥįş ƒįęľđ įş řęqūįřęđ.",
+      "description": "   Ÿőū ĥävę ūşęđ ƒőľľőŵįŉģ väřįäþľęş įŉ ŧĥę ŧäřģęŧ qūęřy: {väřįäþľęş.mäp((ŉämę, į) => (\n                <şpäŉ čľäşşŃämę={şŧyľęş.väřįäþľę} ĸęy={į}>\n                  {ŉämę}\n                  {į < väřįäþľęş.ľęŉģŧĥ - 1 ? ', ' : ''}\n                </şpäŉ>\n              ))}<3></3>Å đäŧä pőįŉŧ ŉęęđş ŧő přővįđę väľūęş ŧő äľľ väřįäþľęş äş ƒįęľđş őř äş ŧřäŉşƒőřmäŧįőŉş őūŧpūŧ ŧő mäĸę ŧĥę čőřřęľäŧįőŉ þūŧŧőŉ äppęäř įŉ ŧĥę vįşūäľįžäŧįőŉ.<5></5>Ńőŧę: Ńőŧ ęvęřy väřįäþľę ŉęęđş ŧő þę ęχpľįčįŧľy đęƒįŉęđ þęľőŵ. Å ŧřäŉşƒőřmäŧįőŉ şūčĥ äş <8>ľőģƒmŧ</8> ŵįľľ čřęäŧę väřįäþľęş ƒőř ęvęřy ĸęy/väľūę päįř.",
+      "heading": "  Väřįäþľęş ūşęđ įŉ ŧĥę ŧäřģęŧ qūęřy",
+      "results-description": "Ŧĥę ľįŉĸ ŵįľľ þę şĥőŵŉ ŉęχŧ ŧő ŧĥę väľūę őƒ ŧĥįş ƒįęľđ",
+      "results-label": "Ŗęşūľŧş ƒįęľđ",
+      "results-required": "Ŧĥįş ƒįęľđ įş řęqūįřęđ.",
+      "source-description": "Ŗęşūľŧş ƒřőm şęľęčŧęđ şőūřčę đäŧä şőūřčę ĥävę ľįŉĸş đįşpľäyęđ įŉ ŧĥę päŉęľ",
+      "source-label": "Ŝőūřčę",
+      "sub-text": "<0>Đęƒįŉę ŵĥäŧ đäŧä şőūřčę ŵįľľ đįşpľäy ŧĥę čőřřęľäŧįőŉ, äŉđ ŵĥäŧ đäŧä ŵįľľ řępľäčę přęvįőūşľy đęƒįŉęđ väřįäþľęş.</0>",
+      "titel": ""
+    }
+  },
   "dashboard": {
     "add-menu": {
       "import": "Ĩmpőřŧ ƒřőm ľįþřäřy",
